# pwd-vault

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/core/: Cargo.toml
crates/core/benches/: crypto_bench.rs
crates/core/src/: audit.rs  crypto.rs  dedup.rs  entry.rs  error.rs  generator.rs  import_export.rs  keychain.rs  lib.rs  strength.rs  totp.rs  vault.rs  vault_index.rs
crates/tauri-plugin/: Cargo.toml
crates/tauri-plugin/src/: commands.rs  lib.rs
src/: App.tsx  api.ts  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/auth/: LockScreen.tsx
src/components/generator/: PasswordGen.tsx
src/components/import-export/: ImportExport.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/vault/: AuditLog.tsx  EntryEditor.tsx  MainContent.tsx  Trash.tsx
src/stores/: vault.ts
src/styles/: global.css
