[package]
name = "pwd-vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core crypto and storage library for pwd-vault password manager"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
log = { workspace = true }

# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
getrandom = "0.3"
subtle = "2"

# Encoding
base64 = "0.22"

# macOS Keychain
# security-framework = "3"

# TOTP
totp-rs = { version = "5", features = ["serde_support", "otpauth"] }

# Import
csv = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "crypto_bench"
harness = false
