[package]
name = "pwd-vault-tauri-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri plugin bridge for pwd-vault"

[dependencies]
pwd-vault-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
